welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:1: error: Missing closing brace `}' assumed here
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
^cigarParty:17: error: Missing closing brace `}' assumed here
} 
^